Fix bug 177269 -- radio groups should have case-insensitive names.  Patch by limonan <limonan@ccoss.com.cn>, r+sr=jst